fix Calories calculate function
